--- a/src/components/cards/cardlist.module.css
+++ b/src/components/cards/cardlist.module.css
@@ -1,7 +1,8 @@
 .item__list{
+
     display: flex;
-    /*justify-content: center;*/
-    grid-gap: 20px;
+    justify-content: center;
+    gap: 30px;
     /*grid-template-columns: repeat(auto-fill, 250px);*/
     flex-wrap: wrap;
 }
