--- a/src/App.css
+++ b/src/App.css
@@ -214,3 +214,14 @@ h6 {
 }
 
 
+.login-layout{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
